Fix padding on mobile devices

--- a/src/onegov.onboarding/onegov/onboarding/theme/styles/onboarding.scss
+++ b/src/onegov.onboarding/onegov/onboarding/theme/styles/onboarding.scss
@@ -5,7 +5,7 @@
     background-color: $white-smoke;
     border-bottom: 1px solid $gainsboro;
     margin-bottom: 1.5rem;
-    padding: 1rem;
+    padding: 1rem 0;
 
     img {
         max-height: 2.5rem;
